--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US" prefix="og: http://ogp.me/ns#">
 <head>
-  <title>Jacksonville Jaguars 2016 Draft Class - A New Era Begins</title>
+  <title>A New Era Begins in Jacksonville... Let's Move Those Chains!</title>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,7 +9,7 @@
   <meta name="keywords" content="jacksonville jaguars, jaguars 2016 draft, jalen ramsey jaguars, myles jack jaguars, 2016 draft picks, jaguars 2016 draft class, movethosechains jacksonville, move those chains jaguars, duval jaguars"/>
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="A New Era Begnis. Meet the Jacksonville Jaguars 2016 Draft Class." />
+  <meta property="og:title" content="A New Era Begins in Jacksonville... Let's Move Those Chains, Jags!" />
   <meta property="og:description" content="A new era has begun in Jacksonville. The Jacksonville Jaguars' 2016 draft class has received high praise. Let's take a look at the new faces in Jacksonville." />
   <meta property="og:url" content="http://movethosechains.com" />
   <meta property="og:site_name" content="Move Those Chains" />
